[package]
name = "rs-TAPS"
version = "0.1.0"
authors = ["glen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
enum-map = "0.6"
itertools = "0.9"
quiche = "0.5"
ring = "0.16"
mio = "0.6"

[dependencies.async-std]
version = "1.6.2"
features = ["attributes", "unstable"]
